# zack

./: Cargo.toml  README.md  meson.build
src/: app.rs  app_shell.rs  collection.rs  collection_store.rs  fonts.rs  home_screen.rs  http_client.rs  main.c  main.rs  model.rs  opencollection.rs  request_tab.rs  routes.rs  settings.rs  settings_screen.rs  workspace.rs
